--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "private": true,
   "dependencies": {
     "@nativescript/core": "~8.3.0",
-    "@nativescript/theme": "~3.0.2",
-    "nativescript-fontawesome": "^1.0.0"
+    "@nativescript/theme": "~3.0.2"
   },
   "devDependencies": {
     "@nativescript/preview-cli": "1.0.2",
